# cuddly-bassoon

./: CMakeLists.txt  README.md  clickable.json  main.cpp  main.qrc  manifest.json  manifest.json.in  youtube-morphc.apparmor  youtube-morphc.desktop  youtube-web.apparmor  youtube-web.desktop.in  youtube-web.url-dispatcher
.github/workflows/: clickable.yml
app/: CMakeLists.txt  Main.qml  no-footer.js  ubuntutheme.js  youtube-morphc.desktop.in
app/UCSComponents/: EmptyState.qml  RadialAction.qml  RadialBottomEdge.qml
app/tests/autopilot/: run
app/tests/autopilot/youtube-morphc/tests/: __init__.py  test_main.py
po/: CMakeLists.txt  nl.po  youtube-morphc.mateo-salta.pot  youtube-web.mateo-salta.pot
